check-in-to-master-to-test-deployment: modifed the benefits section for consistency

--- a/HTML/One-Pages/Lawyer/index.html
+++ b/HTML/One-Pages/Lawyer/index.html
@@ -274,7 +274,7 @@
 							<p class="benefits-bullets">Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution.</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets">Annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
+							<p class="benefits-bullets">Annual lump-sum profit sharing of 10%, deposited at the end of each year.</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">Employees are immediately fully vested in the plan.</p>
@@ -297,7 +297,7 @@
 							<p class="benefits-bullets"> Short Term Disability, Long Term Disability, and Life Insurance</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets"> Dependent care account providing tax deferred savings for child care</p>
+							<p class="benefits-bullets"> Dependent Care Account providing tax-deferred savings for child care</p>
 						</li>
 					</ul>
 				</div>
@@ -306,32 +306,32 @@
 
 		<div class="row">
 			<div class="col-sm-5 content-boxes-v7 boxed">
-				<i id="benefits-fas" class="fa fa-laptop pull-left g-theme-text-color-1"></i>
-				<div class="content-boxes-in-v7">
-					<h4 class="text-uppercase"><strong>Technology Package</strong></h4>
-					<ul class="list-unstyled marked-list-v1">
-						<li data-mark="-">
-							<p class="benefits-bullets">$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
-						</li>
-						<li data-mark="-">
-							<p class="benefits-bullets">Verizon 4G Wifi Card</p>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed">
 				<i id="benefits-fas" class="fa fa-graduation-cap pull-left g-theme-text-color-1"></i>
 				<div class="content-boxes-in-v7">
 					<h4 class="text-uppercase"><strong>Professional Development</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">$3500 per year towards professional development and certification</p>
+							<p class="benefits-bullets">$3,500 per year towards professional development and certification</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">Includes certifications, screencasts, CBTs, conferences, books, etc.</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">24 hours per year of PTO for professional development and certification</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-sm-5 col-sm-offset-1 content-boxes-v7 boxed">
+				<i id="benefits-fas" class="fa fa-laptop pull-left g-theme-text-color-1"></i>
+				<div class="content-boxes-in-v7">
+					<h4 class="text-uppercase"><strong>Technology Package</strong></h4>
+					<ul class="list-unstyled marked-list-v1">
+						<li data-mark="-">
+							<p class="benefits-bullets">$1,800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
+						</li>
+						<li data-mark="-">
+							<p class="benefits-bullets">Verizon 4G Mobile Wi-Fi Hotspot</p>
 						</li>
 					</ul>
 				</div>
@@ -344,7 +344,7 @@
 					<h4 class="text-uppercase"><strong>Refererals</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">$2500 referral bonus for fully cleared candidates</p>
+							<p class="benefits-bullets">$2,500 referral bonus for fully-cleared candidates</p>
 						</li>
 					</ul>
 				</div>
@@ -355,7 +355,7 @@
 					<h4 class="text-uppercase"><strong>Time off</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets"> 33 days of leave each year (PTO, Holidays and Training)</p>
+							<p class="benefits-bullets"> 33 days of leave each year (PTO, Holidays, and Training)</p>
 						</li>
 					</ul>
 				</div>
