--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,10 @@
 				<div class="g-heading-v9 text-center g-mb-30">
 					<h2><strong>Benefits</strong></h2>
 				</div>
-				<p class="text-center g-fs-16 g-mb-60">Case Consulting recognizes that employees are its number one asset and therefore offers a salary and benefits package that reflect this.</p>
+				<p class="text-center g-fs-16 g-mb-60">
+					Case Consulting recognizes that employees are its number one asset and
+					therefore offers a salary and benefits package that reflect this.
+				</p>
 			</div>
 		</div>
 
@@ -271,13 +274,16 @@
 					<h4 class="text-uppercase"><strong>Retirement</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution.</p>
+							<p class="benefits-bullets">
+								Monthly contribution of 3% of your salary in your <a id="retirement-link"href="http://www.sharebuilder401k.com/">401k</a>,
+								without the requirement of an employee contribution
+							</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets">Annual lump sum profit sharing of 10%, deposited at the end of each year.</p>
+							<p class="benefits-bullets">Annual lump sum profit sharing of 10%, deposited at the end of each year</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets">Employees are immediately fully vested in the plan.</p>
+							<p class="benefits-bullets">Employees are immediately fully vested in the plan</p>
 						</li>
 					</ul>
 				</div>
@@ -311,10 +317,10 @@
 					<h4 class="text-uppercase"><strong>Technology Package</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">$1800 per calendar year towards purchase of employee computer/tablet or other technology related device</p>
+							<p class="benefits-bullets">$1,800 per calendar year towards the purchase of employee computer/tablet or other technology related device</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets">Verizon 4G Wifi Card</p>
+							<p class="benefits-bullets">Verizon 4G Wi-Fi Card</p>
 						</li>
 					</ul>
 				</div>
@@ -325,7 +331,7 @@
 					<h4 class="text-uppercase"><strong>Professional Development</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">$3500 per year towards professional development and certification</p>
+							<p class="benefits-bullets">$3,500 per year towards professional development</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">Includes certifications, screencasts, CBTs, conferences, books, etc.</p>
@@ -344,7 +350,7 @@
 					<h4 class="text-uppercase"><strong>Refererals</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">$2500 referral bonus for fully cleared candidates</p>
+							<p class="benefits-bullets">$2,500 referral bonus for fully cleared candidates</p>
 						</li>
 					</ul>
 				</div>
