check-in-to-master-to-test-deployment: made a few more changes to the benefits section

--- a/src/index.html
+++ b/src/index.html
@@ -280,7 +280,7 @@
 							</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets">Annual lump sum profit sharing of 10%, deposited at the end of each year</p>
+							<p class="benefits-bullets">Annual lump-sum profit sharing of 10%, deposited at the end of each year</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets">Employees are immediately fully vested in the plan</p>
@@ -303,7 +303,7 @@
 							<p class="benefits-bullets"> Short Term Disability, Long Term Disability, and Life Insurance</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets"> Dependent care account providing tax deferred savings for child care</p>
+							<p class="benefits-bullets"> Dependent Care Account providing tax-deferred savings for child care</p>
 						</li>
 					</ul>
 				</div>
@@ -320,7 +320,7 @@
 							<p class="benefits-bullets">$1,800 per calendar year towards the purchase of employee computer/tablet or other technology related device</p>
 						</li>
 						<li data-mark="-">
-							<p class="benefits-bullets">Verizon 4G Wi-Fi Card</p>
+							<p class="benefits-bullets">Verizon 4G Mobile Wi-Fi Hotspot</p>
 						</li>
 					</ul>
 				</div>
@@ -350,7 +350,7 @@
 					<h4 class="text-uppercase"><strong>Refererals</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets">$2,500 referral bonus for fully cleared candidates</p>
+							<p class="benefits-bullets">$2,500 referral bonus for fully-cleared candidates</p>
 						</li>
 					</ul>
 				</div>
@@ -361,7 +361,7 @@
 					<h4 class="text-uppercase"><strong>Time off</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets"> 33 days of leave each year (PTO, Holidays and Training)</p>
+							<p class="benefits-bullets"> 33 days of leave each year (PTO, Holidays, and Training)</p>
 						</li>
 					</ul>
 				</div>
