small-change-to-test-deployment: changed header title

--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
 						data-splitout="none"
 						data-responsive_offset="on"
 
-						style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">detail oriented.<br> customer focused.
+						style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">fun focused.<br> customer focused.
 					</div>
 
 					<!-- LAYER NR. 4 -->
@@ -294,7 +294,7 @@
 					<h4 class="text-uppercase"><strong>Health Care</strong></h4>
 					<ul class="list-unstyled marked-list-v1">
 						<li data-mark="-">
-							<p class="benefits-bullets"> Full Medical, Dental, and Vision insurance coverage</p>
+							<p class="benefits-bullets"> Full Medical, Dental, and Vision insurance coverage (company paid premiums)</p>
 						</li>
 						<li data-mark="-">
 							<p class="benefits-bullets"> Flexible Spending Account (FSA)</p>
