--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
 						data-splitout="none"
 						data-responsive_offset="on"
 
-						style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">fun focused.<br> customer focused.
+						style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">detail oriented.<br> customer focused.
 					</div>
 
 					<!-- LAYER NR. 4 -->
