paul-changes: updated events section

--- a/src/index.html
+++ b/src/index.html
@@ -502,52 +502,149 @@
 				<div class="g-heading-v9 text-center g-mb-30">
 					<h2><strong>Events</strong></h2>
 				</div>
-				<p class="g-fs-16 g-mb-60">Case Consulting is interested in experienced professionals with niche skills, who are focused on delivering value to the client, in a flexible non-bureaucratic environment.</p>
+				<p class="g-fs-16 g-mb-60">
+					Case Consulting is dedicated to employee hapiness and a strong work/life balance.
+					We host numerous events throughout the year including the annual holiday party and
+					company picnic in addition to multiple happy hours, movie screenings, and lots of
+					trips to professional conferences.
+				</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
 				<ul class="owl-lawyer list-unstyled g-text-color-2 equal-height-columns">
-					<!-- item -1 -->
+					<!-- item -->
 					<li class="item">
+						<div class="col-sm-6">
+							<div class="caption-outer">
+								<img class="img-responsive" src="Case/assets/img/2017-summer-internship.jpg" alt="">
+								<div class="caption text-area-background g-va-middle g-padding-25">
+									<div class="">
+										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/G1P76LwSpCGRwUqb6" target="_blank">2017 Summer Internship</a></strong></h5>
+										<p>
+											Big changes for Case Consulting in 2017 as we moved to new offices and embarked
+											on our inaugural Summer Internship program!
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- item -->
+						<div class="col-sm-6">
+							<div class="caption-outer">
+								<img class="img-responsive" src="Case/assets/img/2017bptw.jpg" alt="">
+								<div class="caption text-area-background g-va-middle g-padding-25">
+									<div class="">
+										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/6YXNHMP7mbY6MJid9" target="_blank">2017 Best Places to Work</a></strong></h5>
+										<p>
+											Several of our employees attended the Washington Business Journal's 2017
+											Best Places to Work ceremony in Washington D.C.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<!-- item -->
+					<li class="item">
+						<div class="col-sm-6">
+							<div class="caption-outer">
+								<img class="img-responsive" src="Case/assets/img/2017serverless.jpg" alt="">
+								<div class="caption text-area-background g-va-middle g-padding-25">
+									<div class="">
+										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank">2017 Serverless Conf</a></strong></h5>
+										<p>
+											Two of our employees learned a lot while taking in some of the sights
+											at Serverless Conf in Austin, Texas!
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- item -->
 						<div class="col-sm-6">
 							<div class="caption-outer">
 								<img class="img-responsive" src="Case/assets/img/case-holiday-party.jpg" alt="">
 								<div class="caption text-area-background g-va-middle g-padding-25">
 									<div class="">
 										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank">2016 Holiday Party</a></strong></h5>
-										<p>Employees and their loved ones had a great time at our annual holiday party. This year the party was held at Stone Tower Winery in Leesburg and featured an evening of giving, food, poker, and fun.</p>
+										<p>
+											Employees and their loved ones had a great time at our annual holiday party.
+											This year the party was held at Stone Tower Winery in Leesburg and featured
+											an evening of giving, food, poker, and fun.
+										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-						<!-- item2 -->
+					</li>
+					<!-- item -->
+					<li class="item">
+						<!-- item -->
 						<div class="col-sm-6">
 							<div class="caption-outer">
 								<img class="img-responsive" src="Case/assets/img/case-family-picnic.jpg" alt="">
 								<div class="caption text-area-background g-va-middle g-padding-25">
 									<div class="">
 										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/XvmL1Vp7FEAdjzYL6" target="_blank">2016 Family Picnic</a></strong></h5>
-										<p>Our annual Summer picnic is always a blast for employees and their families and this year was no different. The kids (and some adults) enjoyed the inflatable obstacle course and face painting.</p>
+										<p>
+											Our annual Summer picnic is always a blast for employees and their families
+											and this year was no different. The kids (and some adults) enjoyed the
+											inflatable obstacle course and face painting.
+										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-					</li>
-					<!-- item3 -->
-					<li class="item">
+						<!-- item -->
 						<div class="col-sm-6">
 							<div class="caption-outer">
 								<img class="img-responsive" src="Case/assets/img/AWS-trip.jpeg" alt="">
 								<div class="caption text-area-background g-va-middle g-padding-25">
 									<div class="">
 										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank">re:Invent 2016</a></strong></h5>
-										<p>Case Consulting was well represented at AWS re:Invent this year. Employees enjoyed all of the talks and after-hours events and can't wait to go back next year.</p>
+										<p>
+											Case Consulting was well represented at AWS re:Invent this year. Employees enjoyed
+											all of the talks and after-hours events and can't wait to go back next year.
+										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-						<!-- item4 -->
+					</li>
+					<li class="item">
+						<!-- item -->
+						<div class="col-sm-6">
+							<div class="caption-outer">
+								<img class="img-responsive" src="Case/assets/img/rogue_one.jpg" alt="">
+								<div class="caption text-area-background g-va-middle g-padding-25">
+									<div class="">
+										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank">Rogue One: A Star Wars Movie</a></strong></h5>
+										<p>
+											The force is strong with us as we watched Rogue One at the Alamo Drafthouse.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- item -->
+						<div class="col-sm-6">
+							<div class="caption-outer">
+								<img class="img-responsive" src="Case/assets/img/2015-holiday-party.jpg" alt="">
+								<div class="caption text-area-background g-va-middle g-padding-25">
+									<div class="">
+										<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/AE3Jadpp3fcPvF4o9" target="_blank">2015 Holiday Party</a></strong></h5>
+										<p>
+											Employees and their loved ones enjoyed a night out at Salamander Resort and
+											Spa to celebrate the holiday season.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="item">
+						<!-- item -->
 						<div class="col-sm-6">
 							<div class="caption-outer">
 								<img class="img-responsive" src="Case/assets/img/starwars-trip.jpg" alt="">
