paul-changes: updated skills section

--- a/src/index.html
+++ b/src/index.html
@@ -561,32 +561,37 @@
 			<section id="skills">
 				<div class="container-fluid">
 					<div class="g-pt-100 g-pb-30">
-					<div class="g-heading-v9 g-mb-30 text-center">
-						<h2><strong>Skills</strong></h2>
-					</div>
-
-					<div style="margin-left: 27.5%;">
-						<ul class="list-unstyled marked-list-v1">
-							<li>
-								<!-- Pie Chart -->
+						<div class="g-heading-v9 g-mb-30 text-center">
+							<h2><strong>Skills</strong></h2>
+						</div>
+						<div class="row">
+							<div class="col-sm-4">
 								<div class="pie-container">
-									<h4 class="text-center">Current Projects</h4>
+									<h4 class="text-center">Roles</h4>
 									<div>
-									<canvas id="pie"></canvas>
+									<canvas id="roles"></canvas>
 									</div>
 								</div>
-							</li>
-							<li>
-								<!-- bar Chart -->
+							</div>
+
+							<div class="col-sm-4">
 								<div class="bar-container">
-									<h4 class="text-center">Employees with Degrees</h4>
+									<h4 class="text-center">Education</h4>
 									<div>
 										<canvas id="bar"></canvas>
 									</div>
 								</div>
-							</li>
-						</ul>
-					</div>
+							</div>
+
+							<div class="col-sm-4">
+								<div class="pie-container">
+									<h4 class="text-center">Current Projects</h4>
+									<div>
+									<canvas id="technology"></canvas>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<br/>
