paul-changes: updated charts and contact section

--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
 						<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
 							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/conference-room.jpg" alt=""></div>
 							<div class="arrow-section-block arrow-top text-center equal-height-column">
-								<div class="center-font g-heading-v9 text-center "
+								<div class="center-font g-heading-v9 text-center">
 									<h3 class="text-uppercase"><strong>Clients that care</strong></h3>
 								</div>
 								<p class="bar-up">
@@ -804,11 +804,11 @@
 									</div>
 									<p class="g-fs-16 g-mb-60">Case Consulting has an established reputation and level of trust with the client, so contact us to discuss how we can continue to build a productive relationship and deliver impeccable results for our clients.</p>
 									<ul class="list-unstyled g-fs-12 address-list text-uppercase">
-										<li><i class="fa fa-map-marker g-mr-15"></i> <em>Address:</em> <strong>18425 Rustling Woods Court Leesburg, VA 20175</strong></li>
-										<li><i class="fa fa-phone g-mr-15"></i> <em>Phone Number:</em> <strong>703.728.0294</strong></li>
-										<li><i class="fa fa-envelope g-mr-15"></i> <em>Email:</em> <a href="mailto:info@consultwithcase.com"><strong>info@consultwithcase.com</strong></a></li>
-										<li><i class="fa fa-twitter g-mr-15"></i> <em>Twitter:</em> <a href="https://twitter.com/consultwithcase" target="_blank"><strong>@ConsultWithCase</strong></a></li>
-										<li><i class="fa fa-linkedin g-mr-15"></i> <em>Linked In:</em> <a href="https://www.linkedin.com/company/2558032/" target="_blank"><strong>Case Consulting, Inc.</strong></a></li>
+										<li><i class="fa fa-map-marker g-mr-15"></i><strong>18425 Rustling Woods Court Leesburg, VA 20175</strong></li>
+										<li><i class="fa fa-phone g-mr-15"></i><strong>703-728-0294</strong></li>
+										<li><i class="fa fa-envelope g-mr-15"></i><a href="mailto:info@consultwithcase.com"><strong>info@consultwithcase.com</strong></a></li>
+										<li><i class="fa fa-twitter g-mr-15"></i><a href="https://twitter.com/consultwithcase" target="_blank"><strong>@ConsultWithCase</strong></a></li>
+										<li><i class="fa fa-linkedin g-mr-15"></i><a href="https://www.linkedin.com/company/2558032/" target="_blank"><strong>Case Consulting, Inc.</strong></a></li>
 									</ul>
 								</div>
 							</div>
