--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
 									<a href="#careers"><span data-hover="Careers">Careers</span></a>
 								</li>
 								<li class="page-scroll">
-									<a href="#skills"><span data-hover="Skills">Skills</span></a>
+									<a href="#numbers"><span data-hover="Numbers">Numbers</span></a>
 								</li>
 								<li class="page-scroll">
 									<a href="#awards"><span data-hover="Awards">Awards</span></a>
@@ -224,8 +224,9 @@
 							<div id="work-that-matters" class="arrow-section-block arrow-bottom text-center equal-height-column">
 								<h3 class="text-uppercase g-mb-30"><strong>Work that Matters</strong></h3>
 								<p>
-									Case Consulting is a small business focused on providing highly talented, exceptionally skilled
-									developers, managers and integrators to meet mission critical requirements across the IC.
+									Case Consulting is a software services company that supports the mission critical requirements 
+									of the federal government by providing highly talented and exceptionally skilled software developers, 
+									architects, software testers, and program managers.
 								</p>
 							</div>
 							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/workstation.jpg" alt=""></div>
@@ -558,11 +559,11 @@
 			<!-- End Careers section -->
 
 			<!-- skills section -->
-			<section id="skills">
+			<section id="numbers">
 				<div class="container-fluid">
 					<div class="g-pt-100 g-pb-30">
 						<div class="g-heading-v9 g-mb-30 text-center">
-							<h2><strong>Skills</strong></h2>
+							<h2><strong>Case By The Numbers</strong></h2>
 						</div>
 						<div class="row">
 							<div class="col-sm-4">
