paul-changes: changed stock photos

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
 							<!-- SLIDE  -->
 							<li data-index="rs-68" data-transition="zoomout" data-slotamount="default" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="assets/img-temp/promo/img1.jpg" data-rotate="0" data-saveperformance="off" data-title="Intro" data-description="">
 								<!-- MAIN IMAGE -->
-								<img src="Case/assets/img/people.jpg" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+								<img src="Case/assets/img/developer.jpg" alt="" data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 								<!-- LAYERS -->
 
 								<!-- LAYER NR. 1 -->
@@ -229,11 +229,11 @@
 									architects, software testers, and program managers.
 								</p>
 							</div>
-							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/workstation.jpg" alt=""></div>
+							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/pexels-photo-450035.jpg" alt=""></div>
 						</div>
 
 						<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
-							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/conference-room.jpg" alt=""></div>
+							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/workstation.jpg" alt=""></div>
 							<div class="arrow-section-block arrow-top text-center equal-height-column">
 								<div class="center-font g-heading-v9 text-center">
 									<h3 class="text-uppercase"><strong>Clients that care</strong></h3>
