--- a/src/index.html
+++ b/src/index.html
@@ -224,8 +224,8 @@
 							<div id="work-that-matters" class="arrow-section-block arrow-bottom text-center equal-height-column">
 								<h3 class="text-uppercase g-mb-30"><strong>Work that Matters</strong></h3>
 								<p>
-									Case Consulting is a software services company that supports the mission critical requirements 
-									of the federal government by providing highly talented and exceptionally skilled software developers, 
+									Case Consulting is a software services company that supports the mission critical requirements
+									of the federal government by providing highly talented and exceptionally skilled software developers,
 									architects, software testers, and program managers.
 								</p>
 							</div>
@@ -233,7 +233,7 @@
 						</div>
 
 						<div class="col-sm-4 g-text-color-2 g-theme-bg-color-1">
-							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/workstation.jpg" alt=""></div>
+							<div class="arrow-section-img"><img class="full-width" src="Case/assets/img/meeting.jpg" alt=""></div>
 							<div class="arrow-section-block arrow-top text-center equal-height-column">
 								<div class="center-font g-heading-v9 text-center">
 									<h3 class="text-uppercase"><strong>Clients that care</strong></h3>
@@ -677,6 +677,20 @@
 								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
+											<img class="img-responsive" src="Case/assets/img/game-night.jpg" alt="">
+											<div class="caption text-area-background g-va-middle g-padding-25">
+												<div class="">
+													<h5 class="text-uppercase"><strong><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank">Game Nights</a></strong></h5>
+													<p>
+														Employees always have a good time at our monthly game nights in our wonderful office space.
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- item -->
+									<div class="col-sm-6">
+										<div class="caption-outer">
 											<img class="img-responsive" src="Case/assets/img/2017serverless.jpg" alt="">
 											<div class="caption text-area-background g-va-middle g-padding-25">
 												<div class="">
@@ -689,7 +703,9 @@
 											</div>
 										</div>
 									</div>
-									<!-- item -->
+								</li>
+								<!-- item -->
+								<li class="item">
 									<div class="col-sm-6">
 										<div class="caption-outer">
 											<img class="img-responsive" src="Case/assets/img/case-holiday-party.jpg" alt="">
@@ -705,9 +721,6 @@
 											</div>
 										</div>
 									</div>
-								</li>
-								<!-- item -->
-								<li class="item">
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
@@ -724,6 +737,9 @@
 											</div>
 										</div>
 									</div>
+								</li>
+								<!-- item -->
+								<li class="item">
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
@@ -739,8 +755,6 @@
 											</div>
 										</div>
 									</div>
-								</li>
-								<li class="item">
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
@@ -755,6 +769,9 @@
 											</div>
 										</div>
 									</div>
+								</li>
+								<!-- item -->
+								<li class="item">
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
@@ -770,8 +787,6 @@
 											</div>
 										</div>
 									</div>
-								</li>
-								<li class="item">
 									<!-- item -->
 									<div class="col-sm-6">
 										<div class="caption-outer">
