paul-changes: updated bptw logo size and job descriptions

--- a/src/index.html
+++ b/src/index.html
@@ -409,7 +409,7 @@
 
 							<div class="col-md-7">
 								<p>
-									Duties:  The Project Manager shall work with their Manager and other
+									The Project Manager shall work with their Manager and other
 									representatives to achieve the objectives of the project they are assigned
 									to. The Project Manager is responsible for the overall management of the
 									specific project (s) and insuring that the technical solutions and schedules
@@ -434,7 +434,7 @@
 
 							<div class="col-md-7">
 								<p>
-									Duties:  System Engineers provide strategic and tactical planning and
+									System Engineers provide strategic and tactical planning and
 									engineering support for projects.  Personnel are assigned to more
 									complex development tasks based on their Level of expertise.
 									Level 1+ personnel are recognized experts who are assigned to specific
@@ -467,7 +467,7 @@
 
 							<div class="col-md-7">
 								<p>
-									Duties: Provides a total systems perspective including a technical
+									Provides a total systems perspective including a technical
 									understanding of relationships, dependencies and requirements of
 									hardware and software components for a project.  Must be knowledgeable
 									in computer systems and gathering/identifying requirements. Must be
@@ -498,7 +498,7 @@
 
 							<div class="col-md-7">
 								<p>
-									Duties: Develops, implements and tests software to meet specific project
+									Develops, implements and tests software to meet specific project
 									requirements.  Personnel are recognized experts who are assigned to
 									specific high risk or complex projects but are also used to mentor junior
 									personnel and provide ad-hoc support to other projects when needed.  Lead
@@ -524,7 +524,7 @@
 
 							<div class="col-md-7">
 								<p>
-									Duties:  Coordinates and/or performs the O&amp;M activities for Unix or
+									Coordinates and/or performs the O&amp;M activities for Unix or
 									Windows servers. Develops and documents the full range of SOPs and
 									schedules for O&amp;M activities. Identifies recurring O&amp;M problems and
 									recommends steps to reduce the severity and frequency of the problems.
