--- a/src/index.html
+++ b/src/index.html
@@ -406,7 +406,7 @@
 							<div class="row">
 								<div class="col-md-3 col-md-offset-1">
 									<br/>
-									<img src="Case/assets/img/code-bro.jpg" class="img-rounded">
+									<img src="Case/assets/img/peep1.png" width="250" class="img-rounded">
 								</div>
 								<div class="col-md-8">
 									<div class="col-md-12">
@@ -435,7 +435,7 @@
 							<div class="row">
 								<div class="col-md-3 col-md-offset-1">
 									<br/>
-									<img src="Case/assets/img/code-bro.jpg" class="img-rounded">
+									<img src="Case/assets/img/peep2.png" width="250" class="img-rounded">
 								</div>
 								<div class="col-md-8">
 									<div class="col-md-12">
@@ -472,7 +472,7 @@
 							<div class="row">
 								<div class="col-md-3 col-md-offset-1">
 									<br/>
-									<img src="Case/assets/img/code-bro.jpg" class="img-rounded">
+									<img src="Case/assets/img/peep3.png" width="250" class="img-rounded">
 								</div>
 								<div class="col-md-8">
 									<div class="col-md-12">
@@ -507,7 +507,7 @@
 							<div class="row">
 								<div class="col-md-3 col-md-offset-1">
 									<br/>
-									<img src="Case/assets/img/code-bro.jpg" class="img-rounded">
+									<img src="Case/assets/img/peep4.png" width="250" class="img-rounded">
 								</div>
 								<div class="col-md-8">
 									<div class="col-md-12">
@@ -537,7 +537,7 @@
 							<div class="row">
 								<div class="col-md-3 col-md-offset-1">
 									<br/>
-									<img src="Case/assets/img/code-bro.jpg" class="img-rounded">
+									<img src="Case/assets/img/peep5.png" width="250" class="img-rounded">
 								</div>
 								<div class="col-md-8">
 									<div class="col-md-12">
@@ -898,6 +898,16 @@
 				App.init();
 				OwlCarousel.initOwlCarousel();
 			});
+		</script>
+
+		<!-- Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		  ga('create', 'UA-106224724-1', 'auto');
+		  ga('send', 'pageview');
 		</script>
 
 		<!--[if lt IE 10]>
